updated index.html and style.css

--- a/style.scss
+++ b/style.scss
@@ -114,6 +114,8 @@ main {
     flex-direction: column;
     max-width: 385px;
     padding-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
     .image-section {
       width: 100%;
       min-height: 300px;
