--- a/style.css
+++ b/style.css
@@ -108,6 +108,8 @@ main {
     flex-direction: column;
     max-width: 385px;
     padding-bottom: 20px;
+    margin-left: 20px;
+    margin-right: 20px;
   }
   .card-container .image-section {
     width: 100%;
