--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,7 @@ main {
     color: var(--para);
     .product {
       text-transform: uppercase;
+      letter-spacing: 6px;
     }
     .product-title {
       color: var(--title);
