--- a/style.scss
+++ b/style.scss
@@ -94,7 +94,7 @@ main {
         align-items: center;
         justify-content: center;
         gap: 10px;
-        p {
+        span {
           color: var(--card-bg);
           margin-bottom: 4px;
           font-weight: 600;
